fixed z-index of iam minor adjustments

--- a/browser/css/bear.scss
+++ b/browser/css/bear.scss
@@ -36,7 +36,7 @@
 		h3{
 			@extend .lato-lt;
 			font-size: 1em;
-
+			margin-left:0.5em;
 		}
 		h1{
 			color:#ff0909;
