--- a/public/style.css
+++ b/public/style.css
@@ -262,7 +262,8 @@ section {
     position: absolute;
     font-size: 2rem; }
     #bear .title-1 h3 {
-      font-size: 1em; }
+      font-size: 1em;
+      margin-left: 0.5em; }
     #bear .title-1 h1 {
       color: #ff0909;
       font-size: 5em;
